<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.arondillqs5328.laboratorna_3.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="128sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/trapeze"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edit_text_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:hint="@string/value_res_A"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_text_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_A"
        android:hint="@string/value_res_B"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_text_C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_B"
        android:hint="@string/value_res_C"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_text_D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_C"
        android:hint="@string/value_res_D"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/run_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_D"
        android:layout_marginTop="10dp"
        android:text="@string/run_res_btn"
        android:onClick="calculationValue"/>

</RelativeLayout>
